--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+
+    //roomdb
+    apply plugin: 'kotlin-kapt'
+    implementation 'androidx.room:room-runtime:2.3.0'
+    implementation 'androidx.room:room-ktx:2.3.0'
+    kapt 'androidx.room:room-compiler:2.3.0'
+
+    //roomdb보기
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+
 }
